unpackaged/config/xactivities/objects/pmdm__ProgramEngagement__c.object
<CustomObject>
    <label>Program Engagement</label>
    <nameField>
        <label>Program Engagement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Airport_Arrival_Checklist__c</fullName>
        <label>Airport Arrival Checklist</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Alternative_File_Location__c</fullName>
        <label>Alternative File Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constituent_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Constituent Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Engagements (Constituent Group)</relationshipLabel>
        <relationshipName>Program_Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_of_Birth__c</fullName>
        <description>Formula - &quot;Birthplace&quot; text field on Cliente</description>
        <formula>pmdm__Contact__r.Birthplace__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-populate based on Primary Applicant (Client)&apos;s &quot;Birthplace&quot; field.</inlineHelpText>
        <label>Country of Birth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Residence__c</fullName>
        <description>Points to Client&apos;s Mailing Address Country</description>
        <formula>pmdm__Contact__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-fills based on Primary Applicant&apos;s Mailing Address Country</inlineHelpText>
        <label>Country of Residence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Arrival_Actual__c</fullName>
        <label>Date of Arrival (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Arrival_Expected__c</fullName>
        <label>Date of Arrival (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Checklist__c</fullName>
        <label>Document Checklist</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Expression_of_Interest__c</fullName>
        <label>Expression of Interest</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>G_Number__c</fullName>
        <externalId>true</externalId>
        <label>G Number</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Notes__c</fullName>
        <description>2020/12/20 MDM - Created to hold various notes from Refugees data that had collapsed various objects into one single column. This field will act as a holding place for data that can be properly transformed into discreet objects in Salesforce as the program staff find disposable time to do so.</description>
        <label>Legacy Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_individuals_on_application__c</fullName>
        <label>Number of individuals on application</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Arrival_Checklist__c</fullName>
        <label>Pre-Arrival Checklist</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PrimaryApplicant__c</fullName>
        <description>2020/23/10 MDM - Displays Refugees LName in all caps, to comply with IRCC requested format (Refugees Coord. Diane Chua)</description>
        <formula>UPPER( pmdm__Contact__r.LastName )&amp; &quot;, &quot; &amp;  pmdm__Contact__r.FirstName</formula>
        <label>Primary Applicant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refuge_CoSponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Engagements (Co-Sponsor 1)</relationshipLabel>
        <relationshipName>CoSponsorship1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor_2_week_task_list__c</fullName>
        <label>Sponsor 2-week Task List</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Visa_Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visa Office</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Engagements (Visa Office)</relationshipLabel>
        <relationshipName>Visa_Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Withdrawl_of_sponsorship_application__c</fullName>
        <label>Withdrawl of Sponsorship Application</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pmdm__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the Household Account if a Program Engagement benefits members of the Contact&apos;s Household Account. For example, meals from a food bank. If it benefits only one Contact, leave blank.</description>
        <inlineHelpText>Select the Household Account if a Program Engagement benefits members of the Contact&apos;s Household Account. For example, meals from a food bank. If it benefits only one Contact, leave blank.</inlineHelpText>
        <label>Household Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Engagements</relationshipLabel>
        <relationshipName>Program_Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pmdm__ApplicationDate__c</fullName>
        <description>If the Program Engagement stage is Applied, the Application Date is set to TODAY() by the Process Builder process, Template: Program Engagement Object. Clone the template to edit it.</description>
        <inlineHelpText>If the Program Engagement stage is Applied, the Application Date defaults to today if left blank.</inlineHelpText>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pmdm__AutoName_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this is checked, the Program Engagement Name can be manually defined. It will not be auto-named.</description>
        <inlineHelpText>When this is checked, the Program Engagement Name can be manually defined. It will not be auto-named.</inlineHelpText>
        <label>Auto-Name Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pmdm__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Contact engaging in your Program. The Contact name is used with the Program Name in the the Process Builder process titled Template: Program Engagement Object that populates the Program Engagement Name.</description>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Engagements</relationshipLabel>
        <relationshipName>Program_Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pmdm__EndDate__c</fullName>
        <description>If the Program Engagement stage is Completed or Withdrawn, the End Date is set to TODAY() by the Process Builder process Template: Program Engagement Object. Clone the process template to edit it.</description>
        <inlineHelpText>If the Program Engagement Stage is Completed or Withdrawn, the End Date defaults to today if left blank.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pmdm__ProgramCohort__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Cohort</label>
        <referenceTo>pmdm__ProgramCohort__c</referenceTo>
        <relationshipLabel>Program Engagements</relationshipLabel>
        <relationshipName>ProgramEngagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pmdm__Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>pmdm__Program__c.pmdm__Status__c</field>
                <operation>equals</operation>
                <value>Planned, Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>pmdm__Program__c</referenceTo>
        <relationshipLabel>Program Engagements</relationshipLabel>
        <relationshipName>Program_Engagements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pmdm__Role__c</fullName>
        <description>A Contact&apos;s relationship with the Program Engagement. Values are determined by your Admin.</description>
        <inlineHelpText>A Contact&apos;s relationship with the Program Engagement. Values are determined by your Admin.</inlineHelpText>
        <label>Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pmdm__Stage__c</fullName>
        <description>A Contact&apos;s stage in a Program Engagement. Picklist values are determined by your Admin. Don&apos;t delete or modify the API Name of the Active And Enrolled picklist values as they are referenced in PMM reports.</description>
        <inlineHelpText>These Picklist values describe a Contact&apos;s stage of engagement in a Program and are displayed in a Path. Values are determined by your Admin.</inlineHelpText>
        <label>Stage</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Application Denied</fullName>
                </value>
                <value>
                    <fullName>Waitlisted</fullName>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Submission of Applications</fullName>
                </value>
                <value>
                    <fullName>Application Processing</fullName>
                </value>
                <value>
                    <fullName>Preparing for Arrival</fullName>
                </value>
                <value>
                    <fullName>Landed - 12 Months</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <isActive>false</isActive>
                    <label>In Progress</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pmdm__StartDate__c</fullName>
        <description>If the Program Engagement stage is set to Enrolled or Active, the Start Date is set to TODAY() by the Process Builder process, Template: Program Engagement Object. Clone the template to edit it.</description>
        <inlineHelpText>If the Program Engagement Stage is Enrolled or Active, the Start Date defaults to today if left blank.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <recordTypes>
        <fullName>Refugee_Support</fullName>
        <active>true</active>
        <description>For tracking individual and family applicants to the Canadian refugee immigration program.</description>
        <label>Refugee Support</label>
    </recordTypes>
    <validationRules>
        <fullName>pmdm__ACCOUNT_MATCHES_CONTACT_ACCOUNT</fullName>
        <active>true</active>
        <description>Account lookup must match the related Contact&apos;s Account.</description>
        <errorConditionFormula>AND(
!ISBLANK(pmdm__Contact__c),
!ISBLANK(pmdm__Account__c),
pmdm__Contact__r.AccountId !=  pmdm__Account__c
)</errorConditionFormula>
        <errorMessage>Select an Account that matches the related Contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pmdm__APPLICATION_DATE_BEFORE_END_DATE</fullName>
        <active>true</active>
        <description>Ensures Application Date is after the End Date</description>
        <errorConditionFormula>pmdm__ApplicationDate__c &gt;  pmdm__EndDate__c</errorConditionFormula>
        <errorMessage>End Date must be after the Application Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pmdm__APPLICATION_DATE_BEFORE_START_DATE</fullName>
        <active>true</active>
        <description>Ensures application date is after the start date</description>
        <errorConditionFormula>pmdm__ApplicationDate__c &gt; pmdm__StartDate__c</errorConditionFormula>
        <errorMessage>Start Date must be after the Application Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pmdm__END_DATE_WITHIN_PROGRAM_DATES</fullName>
        <active>true</active>
        <description>The Program Engagement End Date must fall within the Program Start and End Dates when specified.</description>
        <errorConditionFormula>OR( 
 AND(
  NOT(ISBLANK(pmdm__EndDate__c)),
  NOT(ISBLANK(pmdm__Program__r.pmdm__StartDate__c)),
  pmdm__EndDate__c &lt; pmdm__Program__r.pmdm__StartDate__c
 ),
 AND(
  NOT(ISBLANK(pmdm__EndDate__c)),
  NOT(ISBLANK(pmdm__Program__r.pmdm__EndDate__c)),
  pmdm__EndDate__c &gt; pmdm__Program__r.pmdm__EndDate__c
 )
)</errorConditionFormula>
        <errorMessage>Select an end date that&apos;s on or after the program start date and on or before the program end date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pmdm__PROGRAM_MATCHES_COHORT_PROGRAM</fullName>
        <active>true</active>
        <description>The Program must match the Program Cohort&apos;s Program when Program Cohort is populated.</description>
        <errorConditionFormula>AND(
!ISBLANK(pmdm__Program__c),
!ISBLANK(pmdm__ProgramCohort__c),
pmdm__ProgramCohort__r.pmdm__Program__c != pmdm__Program__c
)</errorConditionFormula>
        <errorMessage>Select a Program Cohort that matches the Program.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pmdm__START_DATE_BEFORE_END_DATE</fullName>
        <active>true</active>
        <description>Ensures the start date is before the end date.</description>
        <errorConditionFormula>pmdm__StartDate__c &gt; pmdm__EndDate__c</errorConditionFormula>
        <errorMessage>Start Date must be before End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pmdm__START_DATE_WITHIN_PROGRAM_DATES</fullName>
        <active>true</active>
        <description>The Program Engagement Start Date must fall within the Program Start and End Dates when specified.</description>
        <errorConditionFormula>OR( 
 AND(
  NOT(ISBLANK(pmdm__StartDate__c)),
  NOT(ISBLANK(pmdm__Program__r.pmdm__StartDate__c)),
  pmdm__StartDate__c &lt; pmdm__Program__r.pmdm__StartDate__c
 ),
 AND(
  NOT(ISBLANK(pmdm__StartDate__c)),
  NOT(ISBLANK(pmdm__Program__r.pmdm__EndDate__c)),
  pmdm__StartDate__c &gt; pmdm__Program__r.pmdm__EndDate__c
 )
)</errorConditionFormula>
        <errorMessage>Select a start date that&apos;s on or after the program start date and on or before the program end date.</errorMessage>
    </validationRules>
    <listViews>
        <fullName>pmdm__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>pmdm__MyProgramEngagementsOwner</fullName>
        <columns>NAME</columns>
        <columns>pmdm__Contact__c</columns>
        <columns>pmdm__Stage__c</columns>
        <columns>pmdm__StartDate__c</columns>
        <columns>pmdm__EndDate__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Program Engagements</label>
    </listViews>
    <listViews>
        <fullName>pmdm__WaitlistedProgramEngagements</fullName>
        <columns>NAME</columns>
        <columns>pmdm__Contact__c</columns>
        <columns>pmdm__Program__c</columns>
        <columns>pmdm__Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pmdm__Stage__c</field>
            <operation>equals</operation>
            <value>Waitlisted</value>
        </filters>
        <label>Waitlisted Program Engagements</label>
    </listViews>
</CustomObject>